# basic-ai-agent

./: .gitignore  README.md  pyproject.toml
app/: agent.py  config.py  main.py
prompt/: __init__.py  prompt.py
schema/: __init__.py  weather.py
tools/: __init__.py  chains.py  tools.py
ui/: app.py
